--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
