--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "dotenv": "^8.2.0",
     "google-maps-react": "^2.0.6",
     "jquery": "^1.9.1",
+    "leaflet": "^1.6.0",
     "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
