--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.8.1",
     "@cypress/instrument-cra": "^1.1.1",
+    "check-code-coverage": "^1.9.2",
     "cypress": "^4.8.0",
     "nyc": "^15.1.0"
   }
