--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "google-maps-react": "^2.0.6",
     "jquery": "^1.9.1",
     "leaflet": "^1.6.0",
+    "leaflet-routing-machine": "^3.2.12",
     "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
