--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,9 @@
 language: node_js
 node_js:
-  - 12
-
-cache: npm
-
-before_install:
-  - npm i -g npm@6.13.4
-
-install:
-  - npm ci
-
-before_script:
-  - npm start &
-
+  - "stable"
+cache:
+  directories:
+    - node_modules
 script:
   - npm test
   - npm run build
