--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
