--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "wait-on": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
