--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_install:
 install:
   - npm ci
 
-# before_script:
-#   - npm start
+before_script:
+  - npm run start &
 
   #- npm start & wait-on http://localhost:3000
 
