--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "wait-on": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts -r @cypress/instrument-cra start",
+    "start": "set PORT=3000 && react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "test": "nyc mocha",
     "eject": "react-scripts eject",
