--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
-# language: node_js
-# node_js:
-#   - 12
+language: node_js
+node_js:
+  - 12
 
-# cache: npm
+cache: npm
 
-# before_install:
-#   - npm i -g npm@6.13.4
+before_install:
+  - npm i -g npm@6.13.4
 
-# install:
-#   - npm ci
+install:
+  - npm ci
 
 # before_script:
 #   - npm start & wait-on http://localhost:3000
 
-# script:
-#   - npm run cy:run
-#   - npm run build
+script:
+  - npm test
+  - npm run cy:run
+  - npm run build
