--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cy:open": "cypress open",
-    "cy:run": "cypress run",
+    "cy:run": "cypress run --config video=false",
     "dev": "start-test 3000 cy:open",
     "e2e": "start-test 3000",
-    "test:ci": "react-scripts && start-server-and-test http://localhost:3000 cy:run"
+    "test:ci": "react-scripts --watchAll=false && start-server-and-test start http://localhost:3000 cy:run"
 
   },
   "eslintConfig": {
