--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "jquery": "^1.9.1",
     "leaflet": "^1.6.0",
     "leaflet-routing-machine": "^3.2.12",
+    "lrm-graphhopper": "^1.3.0",
     "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "typescript": "^3.9.5",
-    "wait-on": "^5.0.1",
     "react-leaflet": "^2.7.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typescript": "^3.9.5",
+    "wait-on": "^5.0.1"
   },
   "scripts": {
     "start": "set PORT=3000 && react-scripts -r @cypress/instrument-cra start",
