--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ node_js:
   - "stable"
 cache:
   directories:
-  - node_modules
+  - node_modules 
 script:
-  - npm install
-  - npm test
+  - npm cypress open
   - npm run build
