--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flash-message": "^1.0.2",
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.5",
