--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "leaflet": "^1.6.0",
     "leaflet-routing-machine": "^3.2.12",
     "lrm-graphhopper": "^1.3.0",
+    "moment": "^2.27.0",
     "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flash-message": "^1.0.2",
     "react-leaflet": "^2.7.0",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.5",
     "wait-on": "^5.0.1"
