--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-range-slider": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-flash-message": "^1.0.2",
     "react-leaflet": "^2.7.0",
