--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/corslite": "0.0.7",
+    "@mapbox/polyline": "^1.1.1",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +18,7 @@
     "jquery": "^1.9.1",
     "leaflet": "^1.6.0",
     "leaflet-routing-machine": "^3.2.12",
+    "lodash": "^4.17.19",
     "lrm-graphhopper": "^1.3.0",
     "moment": "^2.27.0",
     "popper.js": "^1.16.0",
