--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.19",
     "lrm-graphhopper": "^1.3.0",
     "moment": "^2.27.0",
+    "openrouteservice-js": "^0.1.10",
     "popper.js": "^1.16.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
