--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.5.1",
     "leaflet": "^1.6.0",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet.locatecontrol": "^0.72.0",
     "lodash": "^4.17.19",
     "lrm-graphhopper": "^1.3.0",
     "moment": "^2.27.0",
